Salesforce/ISW Telegram Bot/force-app/main/default/objects/Quiz__c/fields/Choices__c.field-meta.xml
<CustomField>
    <fullName>Choices__c</fullName>
    <label>Choices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>