Salesforce/ISW Telegram Bot/force-app/main/default/objects/Quiz__c/fields/Quiz_set__c.field-meta.xml
<CustomField>
    <fullName>Quiz_set__c</fullName>
    <label>Quiz set</label>
    <referenceTo>Quiz_set__c</referenceTo>
    <relationshipLabel>Quizzes</relationshipLabel>
    <relationshipName>Quizzes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>