Salesforce/ISW Telegram Bot/force-app/main/default/objects/Quiz__c/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <label>Solutions</label>
    <type>TextArea</type>
</CustomField>